--- a/OverParse/MainWindow.xaml
+++ b/OverParse/MainWindow.xaml
@@ -138,7 +138,7 @@
                     <MenuItem Style="{StaticResource submenu}" Header="Hide All Other Players" IsCheckable="True" IsChecked="False" x:Name="Onlyme" Click="Onlyme_Click" />
                     <MenuItem Style="{StaticResource submenu}" Header="Change DPS Format" IsCheckable="True" IsChecked="False" x:Name="DPSFormat" Click="DPSFormat_Click" />
                     <MenuItem Style="{StaticResource submenu}" Header="Round JA/Crit Percents" IsCheckable="True" IsChecked="False" x:Name="Nodecimal" Click="Nodecimal_Click" />
-                    <!-- <MenuItem Style="{StaticResource submenu}" Header="Remove Combat Downtime" IsCheckable="True" IsChecked="False" x:Name="QuestTime" Click="QuestTime_Click"/> -->
+                    <MenuItem Style="{StaticResource submenu}" Header="Remove Combat Downtime" IsCheckable="True" IsChecked="False" x:Name="QuestTime" Click="QuestTime_Click"/>
                     <MenuItem Style="{StaticResource submenu}" Header="Change Data Update interval" Click="ChangeInterval_Click" />
                 </MenuItem>
                 <MenuItem Style="{StaticResource topmenu}" Header="Window">
